# s4485827_thesis

./: PCB2.PcbDoc  README.md
firmware/apps/thesis/: CMakeLists.txt  Kconfig  prj.conf
firmware/apps/thesis/boards/: disco_l475_iot1.conf  nucleo_l152re.conf
firmware/apps/thesis/include/: main.h
firmware/apps/thesis/src/: main.c
firmware/mylib/gps/include/: hal_zedf9p.h  os_zedf9p.h
firmware/mylib/gps/src/: hal_zedf9p.c  os_zedf9p.c
firmware/mylib/lora/include/: hal_mdot.h  os_mdot.h
firmware/mylib/lora/src/: hal_mdot.c  os_mdot.c
firmware/thesis/: prj.conf
firmware/thesis/boards/: disco_l475_iot1.overlay  nucleo_l152re.overlay
firmware/thesis/include/: main.h
firmware/thesis/src/: main.c
mylib/gps/include/: hal_zedf9p.h  os_zedf9p.h
mylib/gps/src/: hal_zedf9p.c  os_zedf9p.c
mylib/lora/include/: hal_mdot.h  os_mdot.h
mylib/lora/src/: hal_mdot.c  os_mdot.c
thesis/: CMakeLists.txt  Kconfig
thesis/boards/: disco_l475_iot1.conf  disco_l475_iot1.overlay  nucleo_l152re.conf  nucleo_l152re.overlay
thesis/include/: main.h
